# poli-virtual

./: .env  .gitattributes  .gitignore  README.md  package-lock.json  package.json  postcss.config.js  requirements.txt
backend/: .env  README.md  pyproject.toml  requirements.txt
backend/Users/: models.py  urls.py  views.py
backend/Users/migrations/: 0001_initial.py
backend/app/: .env
backend/app/Categories/: models.py  urls.py  views.py
backend/app/Categories/migrations/: 0001_initial.py
backend/app/Content/: models.py  urls.py  views.py
backend/app/Content/migrations/: 0001_initial.py
backend/app/Courses/: models.py  urls.py  views.py
backend/app/Courses/migrations/: 0001_initial.py  0002_alter_course_trailer_video_url.py  0002_remove_course_instructors_course_instructor.py  0003_course_course_image_url.py  0004_alter_course_course_image_url_and_more.py  0005_alter_course_course_image_url_and_more.py
backend/app/Users/: models.py  urls.py  views.py
backend/app/Users/migrations/: 0001_initial.py  0002_user_email_verification.py  0002_user_profile_image_url.py  0002_user_score_teacher.py  0003_alter_user_profile_image_url.py
backend/app/Users/templates/: hello_world.html
backend/app/app/: settings.py  settings.py.bs1  urls.py
backend/backend/: settings.py  urls.py
frontend/: .env.local  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
src/app/: layout.tsx  not-found.tsx  page.tsx
src/components/: BannerCards.tsx  BigBanner.tsx  BigBannerCards.tsx  BigSection.tsx  Breadcrumbs.tsx  DifferentText.tsx  FormContact.tsx  (+10 more)
(+107 files in other folders)
